# Vari-Joern

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  baital_requirements.txt  build.gradle  requirements.txt  settings.gradle  setup.cfg
.github/workflows/: docker-image.yml
config/checkstyle/: checkstyle.xml
docs/: Arguments.md  Configuration.md  OutputFormats.md  Sugarlyzer.md
docs/analyzers/: Joern.md
docs/composers/: Antenna.md  Kbuild.md  Kconfig.md
docs/feature-model-readers/: FeatureIDE.md  Torte-kmax.md
docs/samplers/: BDDSampler.md  Baital.md  Fixed.md  HSCA.md  LS-Sampling-Plus.md  T-Wise.md  Uniform.md
lib/: license-javabdd.txt  license-jsmtlib.txt  license-json-lib.txt  license-json-simple.txt  license-superc-xtc.txt  license-z3.txt
scripts/: create_dddmp.sh  install_superc.bash  run_HSCA.py
src/main/python/: README
src/main/python/kgenerateBeta/: kgenerate.py
src/main/python/sugarlyzer/: PresenceConditionDemo.py  SugarCRunner.py  Tester.py
src/main/python/sugarlyzer/analyses/: AbstractTool.py  AnalysisToolFactory.py  Clang.py  Infer.py  Joern.py  Phasar.py  TestTool.py
src/main/python/sugarlyzer/models/: Alarm.py  AxtlsSpecification.py  (+8 more)
src/main/resources/: log4j2.xml
src/main/resources/joern/: scan.sc
src/main/resources/kmax/: run-kmaxall.py
src/main/resources/torte/: axtls-working-tree-kmax.sh  busybox-working-tree-kmax.sh  fiasco-working-tree-kmax.sh  kclause-Dockerfile-old.patch  kclause-Dockerfile.patch  linux-working-tree-kmax.sh  toybox-working-tree-kmax.sh
src/test/resources/: log4j2-test.xml
(+324 files in other folders)
