[metadata]
name = Sugarlyzer
version = 0.0.1-alpha
author = Austin Mordahl, Tim Baechle

[options]
python_requires >= 3.8
packages = find:
package_dir =
    = src/main/
include_package_data = True
install_requires =
    docker~=5.0.3
    hypothesis==6.48.2
    z3-solver~=4.8.17.0
    jsonschema~=4.6.1
    pathos~=0.2.9
    tqdm~=4.64.1
    pytest~=7.1.3
    dill~=0.3.5.1
    z3~=0.2.0
    pcpp~=1.30

[options.packages.find]
where = src/main/

[options.entry_points]
console_scripts =
    dispatcher = python.sugarlyzer.Dispatcher:main
    tester = python.sugarlyzer.Tester:main

# Ensures that the files from the resources directory are actually added to the wheel file.
[options.package_data]
* = *.json, *.txt, *.sc